# PhysicAI-Arm-ROS

./: README.md  package.xml  setup.cfg  setup.py
config/: bridge.yaml  joints.yaml
launch/: bringup.launch.py  joystick.launch.py  sim_bridge.launch.py
models/physicai_arm_so101/: README.txt  model.config  model.sdf
physicai_arm/: camera_node.py  feetech_common.py  feetech_follower_driver.py  feetech_jointstate_driver.py  feetech_leader_driver.py  fk_calc.py  ik_calc.py  joint_targets_to_cmd_pos.py  joy_to_target.py  leader_to_follower_relay.py  simple_pose_pub.py
urdf/: physicai_arm.urdf
world/: ex_sim.sdf
