<?xml version="1.0"?>
<package format="3">
  <name>physicai_arm_gz</name>
  <version>0.1.0</version>
  <description>Gazebo Sim bridge package for the PhysicAI / SO101 arm.</description>

  <maintainer email="noreply@example.com">OpenAI</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/../"/>
  </export>
</package>
